# TrainTimes

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Arr.kt  Dep.kt  Location.kt  Pas.kt  PushPortMessage.kt  PushPortMessageItem.kt  TS.kt  X.kt  XX.kt  XXX.kt  XXXX.kt  XXXXX.kt  XXXXXX.kt  contour.cpp
app/src/main/proto/: Favourites.proto
app/src/main/res/animator/: loading_indeterminate.xml
app/src/main/res/color/: bottom_nav_color.xml  bottom_nav_item_color.xml  thumb_color.xml
app/src/main/res/drawable/: alt_dashed_line.xml  app_widget_bg.xml  avd_loading_line.xml  badge_drawable.xml  checkmark_background.xml  circle_origin.xml  dashed_line.xml  dep_arr_track.xml  ic_baseline_add_alert.xml  ic_directions_railway.xml  ic_geek_mode.xml  ic_hs_train.xml  ic_launcher_bg.xml  ic_planner.xml  ic_pound.xml  ic_speed.xml  ic_star_selector.xml  indicator_dot.xml  map_shape.xml  nrcc_bg.xml  popup_background.xml  rounded_rv_item.xml  rounded_search_shape.xml  station_selector_btn_bg.xml  vertical_dashed_line.xml  widget_inset_bg.xml
app/src/main/res/font/: circularstd.xml  manrope.xml
app/src/main/res/layout/: activity_main.xml  activity_tracktimes_widget_configure.xml  custom_railcard_selection.xml  departure_list_item.xml  departure_list_item_widget.xml  dynamic_nrcc_message.xml  favourite_item.xml  fragment_dep_board_results.xml  fragment_dep_search.xml  fragment_favourites.xml  fragment_home.xml  fragment_journey_details.xml  fragment_journey_planner.xml  fragment_nearby.xml  fragment_planner_results.xml  fragment_planner_station_search.xml  fragment_select_station.xml  fragment_service_detail.xml  fragment_station_detail.xml  fragment_station_search.xml  guidelines.xml  item_popup_action.xml  item_railcard.xml  journey_plan_item.xml  (+13 more)
(+312 files in other folders)
